# lcm-python-scripts

./: CMakeLists.txt  README
python/audio_speech/: audio2lcm.py  fetch_speech_files.py  get_synth_file.py  hr_audio_lcm.py  hr_speech  lcm2audio.py  run_speech_server.py  speech_sythesizer.py  voice_recorder.py
python/log_analysis/: compare_timestamps.py  log_velocity_to_file.py  plot_control.py  save_pose_values.py
python/pnc/: command_velocity.py  floor_detector.py  topo_navigator.py
python/utils/: floor_change.py  host_status.py
